2010-02-16  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	Fix bug #15374 : gtkmm-2.14 has not Gtk::Action set_stock_id (2).

2010-02-16  kitone  <kitone@gna.org>

	* src/gui/menubar.cc:
	* src/utility.h:
	Fix bug #15374 : gtkmm-2.14 has not Gtk::Action set_stock_id.

2010-02-15  kitone  <kitone@gna.org>

	* src/we/waveformrenderergl.cc:
	Fix waveform renderer gl build error.

2010-02-10  kitone  <kitone@gna.org>

	* plugins/actions/plaintext/plaintext.cc:
	* share/menubar.xml:
	* src/gui/menubar.cc:
	Reorganize the menu file with a sub-menu import and export. 

2010-02-10  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2010-02-02  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.36.0 release.

2010-02-01  kitone  <kitone@gna.org>

	Fix bug #14651 : Subtitle sorting option.

	* configure.in:
	* plugins/actions/Makefile.am:
	* plugins/actions/sortsubtitles/Makefile.am:
	* plugins/actions/sortsubtitles/sortsubtitles.cc:
	* plugins/actions/sortsubtitles/sortsubtitles.se-plugin.in:
	Introduce new plugin sortsubtitles.
	
	* share/menubar.xml:
	Add placeholder in the menu Timing.

	* src/subtitles.cc:
	* src/subtitles.h:
	Add function to remove only one subtitle.

2010-01-31  kitone  <kitone@gna.org>

	* share/ui/dialog-export-text.ui:
	* share/ui/dialog-import-text.ui:
	* share/ui/dialog-open-document.ui:
	* share/ui/dialog-save-document.ui:
	Small fixes in the border-with value.

2010-01-31  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Update the extension of the filename when the format change.

2010-01-31  kitone  <kitone@gna.org>

	* src/subtitleformatsystem.cc:
	* src/subtitleformatsystem.h:
	New function get_info from the format.

2010-01-30  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	Add icons to the skip items.

2010-01-28  kitone  <kitone@gna.org>

	* configure.in: